- first part of fix for 13639076 - remove jdk5 specific libraries - several minor types/fixes found along the way

--- a/jaxb-ri/nbproject/project.properties
+++ b/jaxb-ri/nbproject/project.properties
@@ -1,7 +1,7 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -60,7 +60,6 @@ dist.dir=dist
 dist.jar=${dist.dir}/JAXB_2.2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.activation.jar=tools/lib/redist/activation.jar
 file.reference.ant-contrib-0.6.jar=tools/lib/util/ant-contrib-0.6.jar
 file.reference.ant-junit.jar=tools/lib/util/ant-junit.jar
 file.reference.ant-launcher.jar=tools/lib/util/ant-launcher.jar
@@ -74,7 +73,7 @@ file.reference.build-classes=../jaxb-unit/test/build/classes
 file.reference.codemodel.jar=tools/lib/rebundle/compiler/codemodel.jar
 file.reference.commons-jexl-1.0-beta-1.jar=../jaxb-unit/tools/lib/util/commons-jexl-1.0-beta-1.jar
 file.reference.dom4j.jar=../jaxb-unit/tools/lib/util/dom4j.jar
-file.reference.dtd-parser-1.0.jar=tools/lib/rebundle/compiler/dtd-parser-1.0.jar
+file.reference.dtd-parser.jar=tools/lib/rebundle/compiler/dtd-parser.jar
 file.reference.emma.jar=../jaxb-unit/tools/lib/util/emma.jar
 file.reference.FastInfoset.jar=tools/lib/util/FastInfoset.jar
 file.reference.forehead.jar=../jaxb-unit/tools/lib/util/forehead.jar
@@ -89,43 +88,35 @@ file.reference.jdom.jar=../jaxb-unit/tools/lib/util/jdom.jar
 file.reference.jfreechart-0.9.19.jar=../jaxb-unit/tools/lib/util/jfreechart-0.9.19.jar
 file.reference.jing-rnc-driver.jar=tools/lib/util/jing-rnc-driver.jar
 file.reference.jing.jar=tools/lib/util/jing.jar
-file.reference.jsr173_1.0_api.jar=tools/lib/redist/jsr173_1.0_api.jar
 file.reference.junit-format.jar=../jaxb-unit/tools/lib/util/junit-format.jar
 file.reference.junit.jar=../jaxb-unit/tools/lib/util/junit.jar
 file.reference.msv.jar=tools/lib/rebundle/runtime/msv.jar
 file.reference.parallel-junit.jar=../jaxb-unit/tools/lib/util/parallel-junit.jar
 file.reference.pretty-printer.jar=tools/lib/util/pretty-printer.jar
 file.reference.relaxngDatatype.jar=tools/lib/rebundle/compiler/relaxngDatatype.jar
-file.reference.resolver.jar=tools/lib/rebundle/compiler/resolver.jar
 file.reference.rngom.jar=tools/lib/rebundle/compiler/rngom.jar
 file.reference.sfx4j-1.0.jar=tools/lib/util/sfx4j-1.0.jar
-file.reference.sjsxp.jar=tools/lib/util/sjsxp.jar
 file.reference.stax-ex.jar=tools/lib/util/stax-ex.jar
 file.reference.test-j2s=../jaxb-unit/test/j2s/
 file.reference.test-metadata=../jaxb-unit/test/metadata/
 file.reference.test-src=../jaxb-unit/test/src/
 file.reference.txw2.jar=tools/lib/rebundle/runtime2/txw2.jar
 file.reference.vmtools-0.5.jar=../jaxb-unit/tools/lib/util/vmtools-0.5.jar
-file.reference.xalan.jar=../jaxb-unit/tools/lib/util/xalan.jar
-file.reference.xercesImpl.jar=tools/lib/util/xercesImpl.jar
 file.reference.xsom.jar=tools/lib/rebundle/compiler/xsom.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.codemodel.jar}:\
-    ${file.reference.dtd-parser-1.0.jar}:\
+    ${file.reference.dtd-parser.jar}:\
     ${file.reference.istack-commons-tools.jar}:\
     ${file.reference.relaxngDatatype.jar}:\
-    ${file.reference.resolver.jar}:\
     ${file.reference.rngom.jar}:\
     ${file.reference.xsom.jar}:\
     ${file.reference.isorelax.jar}:\
     ${file.reference.msv.jar}:\
     ${file.reference.istack-commons-runtime.jar}:\
     ${file.reference.txw2.jar}:\
-    ${file.reference.activation.jar}:\
     ${file.reference.jaxb-api.jar}:\
-    ${file.reference.jsr173_1.0_api.jar}:\
     ${file.reference.ant-contrib-0.6.jar}:\
     ${file.reference.ant-junit.jar}:\
     ${file.reference.ant-launcher.jar}:\
@@ -138,9 +129,7 @@ javac.classpath=\
     ${file.reference.jing.jar}:\
     ${file.reference.pretty-printer.jar}:\
     ${file.reference.sfx4j-1.0.jar}:\
-    ${file.reference.sjsxp.jar}:\
     ${file.reference.stax-ex.jar}:\
-    ${file.reference.xercesImpl.jar}:\
     ${file.reference.build-classes}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -164,8 +153,7 @@ javac.test.classpath=\
     ${file.reference.junit-format.jar}:\
     ${file.reference.junit.jar}:\
     ${file.reference.parallel-junit.jar}:\
-    ${file.reference.vmtools-0.5.jar}:\
-    ${file.reference.xalan.jar}
+    ${file.reference.vmtools-0.5.jar}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
