--- a/jaxb-ri/xjc/build.xml
+++ b/jaxb-ri/xjc/build.xml
@@ -3,7 +3,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -175,8 +175,9 @@
 
         <javac srcdir="${xjc.src}:${xjc.gensrc}" destdir="${xjc.classes}"
             debug="${compile.debug}" optimize="${compile.optimize}"
-        	source="1.5" target="1.5"
+            source="1.5" target="1.5"
             deprecation="${compile.deprecation}" >
+            <compilerarg value="-XDignore.symbol.file=true"/>
             <classpath refid="javac.classpath" />
         </javac>
         
@@ -219,6 +220,7 @@
             <classpath>
               <fileset dir="${jaxb.libs.util}" includes="*.jar" />
             </classpath>
+            <compilerarg value="-XDignore.symbol.file=true"/>
         </javac>
     </target>
         
