--- a/jaxb-ri/xjc/src/com/sun/tools/xjc/MessageBundle.properties
+++ b/jaxb-ri/xjc/src/com/sun/tools/xjc/MessageBundle.properties
@@ -1,7 +1,7 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -85,6 +85,7 @@ Options:\n\
 \ \ -target (2.0|2.1)  :  behave like XJC 2.0 or 2.1 and generate code that doesn't use any 2.2 features.\n\
 \ \ -encoding <encoding> :  specify character encoding for generated source files\n\
 \ \ -enableIntrospection :  enable correct generation of Boolean getters/setters to enable Bean Introspection apis \n\
+\ \ -disableXmlSecurity  :  disables XML security features when parsing XML documents \n\
 \ \ -contentForWildcard  :  generates content property for types with multiple xs:any derived elements \n\
 \ \ -xmlschema         :  treat input as W3C XML Schema (default)\n\
 \ \ -relaxng           :  treat input as RELAX NG (experimental,unsupported)\n\
