--- a/jaxb-ri/xjc/src/com/sun/tools/jxc/MessageBundle.properties
+++ b/jaxb-ri/xjc/src/com/sun/tools/jxc/MessageBundle.properties
@@ -1,7 +1,7 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -58,6 +58,7 @@ Options: \n\
 \ \ \ \ -classpath <path>     : specify where to find user specified files\n\
 \ \ \ \ -encoding <encoding>  : specify encoding to be used for annotation processing/javac invocation \n\
 \ \ \ \ -episode <file>       : generate episode file for separate compilation\n\
+\ \ \ \ -disableXmlSecurity  :  disables XML security features for usage on xml parsing apis \n\
 \ \ \ \ -version              : display version information\n\
 \ \ \ \ -fullversion          : display full version information\n\
 \ \ \ \ -help                 : display this usage message
