build osgi together with hudson target, include osgi bundles within jaxb release distribution removed some obsolete jaxb1 stuff build licensee target properly

--- a/jaxb-ri/build.properties
+++ b/jaxb-ri/build.properties
@@ -40,7 +40,7 @@
 
 # versions
 release.spec.version=2.2.6
-release.impl.version=2.2.5
+release.impl.version=2.2.6
 release.impl.version.suffix=-SNAPSHOT
 
 mvnProxyHost=www-proxy.us.oracle.com
@@ -52,6 +52,7 @@ jaxb-unit.root=${basedir}/../jaxb-unit
 
 tools.root=${basedir}/tools
 jaxb.libs=${tools.root}/lib
+jaxb.libs.osgi=${tools.root}/lib/osgi
 jaxb.libs.src=${jaxb.libs}/src
 jaxb.libs.redist=${jaxb.libs}/redist
 jaxb.libs.rebundle=${jaxb.libs}/rebundle
@@ -133,6 +134,7 @@ javadoc.nodeprecation=false
 osgi.root=${jaxb.root}/osgi
 osgi.build=${osgi.root}/build
 osgi.build.rt=${osgi.root}/build/rt
+osgi.dist=${jaxb.dist}/osgi
 
 jaxb.samples=${basedir}/samples
 samples.root=${jaxb.root}/samples
