--- a/jaxb-ri/osgi/build.xml
+++ b/jaxb-ri/osgi/build.xml
@@ -3,7 +3,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -166,14 +166,10 @@
             <attribute name="Implementation-Version" value="${jaxb.Implementation-Version}"/>
         </manifest>
 
-        <jar destfile="${osgi.build}/jaxb-osgi.jar"
+        <mkdir dir="${osgi.dist}"/>
+        <jar destfile="${osgi.dist}/jaxb-osgi.jar"
              manifest="${osgi.build.rt}/META-INF/MANIFEST.MF">
             <zipfileset src="${osgi.build.rt}/jaxb-bnd.jar"/>
-            <zipfileset src="${jaxb.dist}/lib/jaxb1-impl.jar">
-                <patternset>
-                    <exclude name="org/relaxng/datatype/**"/>
-                </patternset>
-            </zipfileset>
             <zipfileset src="${jaxb.dist}/lib/jaxb-xjc.jar">
                 <include name="1.0/**"/>
                 <include name="com/sun/tools/xjc/*Task*"/>
@@ -186,7 +182,9 @@
                 <include name="org/jvnet/fastinfoset/stax/**"/>
              </zipfileset>
         </jar>
-        
+        <copy todir="${osgi.dist}">
+            <fileset dir="${jaxb.libs.osgi}" includes="*.jar"/>
+        </copy>
     </target>
 
     <target name="clean">
@@ -210,13 +208,13 @@
             <classpath refid="javac.classpath"/>
             <arg value="-quiet"/>
         </javadoc>
-        <zip zipfile="${osgi.build}/jaxb-osgi-javadoc.jar">
+        <zip zipfile="${osgi.dist}/jaxb-osgi-javadoc.jar">
             <fileset dir="${jaxb.build}/jaxbosgisrc"/>
         </zip>
     </target>
 
     <target name="sources">
-        <jar destfile="${osgi.build}/jaxb-osgi-sources.jar">
+        <jar destfile="${osgi.dist}/jaxb-osgi-sources.jar">
             <zipfileset src="${jaxb.dist}/lib/jaxb-impl.src.zip"/>
             <zipfileset src="${jaxb.dist}/lib/jaxb-xjc.src.zip"/>
         </jar>
